Update personal projects list

--- a/Home/Pages/Index.razor
+++ b/Home/Pages/Index.razor
@@ -6,8 +6,8 @@
 <Row>
     <Box Title="Hello there!">
         <p>
-            I started programming in High School, and have had a passion for it ever since. 
-            The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C#, C++, Python, and JavaScript. 
+            I started programming in High School, and have had a passion for it ever since.
+            The first language I ever used was Java and it will always have a soft spot in my heart, however since then I have learned and grown to love many other languages such as C#, C++, Python, and JavaScript.
             The best thing to me about being a Software Developer is the constant need to learn and hone your skills with how quickly new technologies and best practices are released.
             <br />
             <br /> Some qualities for developing software that I think are important:
@@ -64,7 +64,6 @@
                 </Row>
             </Box>
         </Row>
-        <p class="footnote">+ means I am currently working with this tech</p>
     </Box>
 </Row>
 
@@ -84,13 +83,36 @@
                     BaldersGait is a goofy little idle game I am developing in my free time.
                     <br />Used: Avalonia, C#, Git
                 </p>
+                <h4><a href="https://github.com/CorruptComputer/Shipyard" target="_blank" rel="noopener">Shipyard</a>:</h4>
+                <p>
+                    Shipyard is a .NET application to package .NET applications on Linux.
+                    Currently supports RPM packages, more formats in development.
+                    <br />Used: C#, Git, NuGet
+                </p>
+                <h4><a href="https://github.com/CorruptComputer/ReQuesty" target="_blank" rel="noopener">ReQuesty</a>:</h4>
+                <p>
+                    Fork of Kiota, an OpenAPI based HTTP Client code generator.
+                    Changing this to better suit my needs.
+                    <br />Used: C#, Git, NuGet
+                </p>
             </Box>
             <Box TitleType="TitleType.H3" Title="Maintaining" BackgroundColorOverride="#454d6a">
                 <h4><a href="https://github.com/CorruptComputer/home" target="_blank" rel="noopener">My Website</a>:</h4>
                 <p>
-                    The site you're currently looking at. 
+                    The site you're currently looking at.
                     I am not a designer, but I hope it still looks alright!
                     <br />Used: Blazor WebAssembly, Cloudflare, CSS, C#, Git, HTML
+                </p>
+                <h4><a href="https://github.com/CorruptComputer/Questy" target="_blank" rel="noopener">Questy</a>:</h4>
+                <p>
+                    Fork of MediatR from before their license change.
+                    Maintaining for my own projects that depend on it, no plans for major changes.
+                    <br />Used: C#, Git, NuGet
+                </p>
+                <h4><a href="https://github.com/CorruptComputer/Beepsky" target="_blank" rel="noopener">Beepsky</a>:</h4>
+                <p>
+                    Spiritual successor to Officer-Beepsky, this bot was rewritten in C# and uses NetCord.
+                    <br />Used: C#, Git
                 </p>
             </Box>
             <Box TitleType="TitleType.H3" Title="End of Life" BackgroundColorOverride="#454d6a">
@@ -101,8 +123,8 @@
                 </p>
                 <h4><a href="https://github.com/CorruptComputer/Officer-Beepsky" target="_blank" rel="noopener">Officer-Beepsky</a>:</h4>
                 <p>
-                    Officer-Beepsky is an open source Discord bot. 
-                    I made it for some friends and myself to use in order to play music and manage our server. 
+                    Officer-Beepsky is an open source Discord bot.
+                    I made it for some friends and myself to use in order to play music and manage our server.
                     It was built with Discord4J as its main API to use to connect to Discord.
                     <br />Used: Bash, Git, Gradle, Java, PowerShell
                 </p>
