Update description of BaldersGait and add note that its a working name

--- a/Home/Pages/Index.razor
+++ b/Home/Pages/Index.razor
@@ -78,9 +78,10 @@
                     so this is my attempt at making one to exactly fit my needs.
                     <br />Used: Blazor WebAssembly, Cloudflare, CSS, C#, Git, HTML, JavaScript, Postgres
                 </p>
-                <h4><a href="https://github.com/CorruptComputer/BaldersGait" target="_blank" rel="noopener">BaldersGait</a>:</h4>
+                <h4><a href="https://github.com/CorruptComputer/BaldersGait" target="_blank" rel="noopener">BaldersGait (working name)</a>:</h4>
                 <p>
                     BaldersGait is a goofy little idle game I am developing in my free time.
+                    It is about running a barber shop that gives a single haircut type, bald.
                     <br />Used: Avalonia, C#, Git
                 </p>
                 <h4><a href="https://github.com/CorruptComputer/Shipyard" target="_blank" rel="noopener">Shipyard</a>:</h4>
