--- a/Home/Pages/Index.razor
+++ b/Home/Pages/Index.razor
@@ -112,7 +112,7 @@
                 </p>
                 <h4><a href="https://github.com/CorruptComputer/Beepsky" target="_blank" rel="noopener">Beepsky</a>:</h4>
                 <p>
-                    Spiritual successor to Officer-Beepsky, this bot was rewritten in C# and uses NetCord.
+                    Successor to Officer-Beepsky, this bot was rewritten in C# and uses NetCord.
                     <br />Used: C#, Git
                 </p>
             </Box>
