--- a/Home/Components/GamesNavbar.razor
+++ b/Home/Components/GamesNavbar.razor
@@ -6,10 +6,10 @@
             <div>Nim</div>
         </a>
     </div>
-    <!--div class="navSquare @(SelectedGameButton == GameButton.Voronoi ? "selected" : string.Empty)" id="voronoiButton">
+    <div class="navSquare @(SelectedGameButton == GameButton.Voronoi ? "selected" : string.Empty)" id="voronoiButton">
         <a @onclick="NavigateToVoronoi">
-            <img src="/images/blog.webp" alt="Voronoi" />
+            <img src="/images/games/voronoi-icon.png" alt="Voronoi" />
             <div>Voronoi</div>
         </a>
-    </div-->
+    </div>
 </nav>
