--- a/Home/Pages/Games/Voronoi/Index.razor
+++ b/Home/Pages/Games/Voronoi/Index.razor
@@ -35,6 +35,6 @@
             <input type="checkbox" @onchange="OnManhattanToggle" checked="@State.ManhattanDistance" />
             Use Manhattan Distance
         </label-->
-        <button @onclick="OnClear">Clear Points</button>
+        <Button OnLeftClickCallback="OnClear">Clear Points</Button>
     </div>
 </Box>
